[gd_scene load_steps=5 format=2]

[ext_resource path="res://Graphics/tileset_legacy_trans.png" type="Texture" id=1]
[ext_resource path="res://Scripts/TrafficLight.gd" type="Script" id=2]
[ext_resource path="res://Sounds/StartSequenceBeep1.ogg" type="AudioStream" id=3]
[ext_resource path="res://Sounds/StartSequenceBeep2.ogg" type="AudioStream" id=4]

[node name="TrafficLight" type="Spatial"]
script = ExtResource( 2 )

[node name="CSGBox" type="CSGBox" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
width = 5.0
height = 1.0
depth = 0.125

[node name="Lights" type="Spatial" parent="CSGBox"]

[node name="Light1" type="Sprite3D" parent="CSGBox/Lights"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 0, 0.1 )
modulate = Color( 0.258824, 0.258824, 0.258824, 1 )
pixel_size = 0.05
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 459, 408, 16, 16 )

[node name="Light2" type="Sprite3D" parent="CSGBox/Lights"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.100331 )
modulate = Color( 0.258824, 0.258824, 0.258824, 1 )
pixel_size = 0.05
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 459, 408, 16, 16 )

[node name="Light3" type="Sprite3D" parent="CSGBox/Lights"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0, 0.1 )
modulate = Color( 0.258824, 0.258824, 0.258824, 1 )
pixel_size = 0.05
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 459, 408, 16, 16 )

[node name="AudioPlayers" type="Spatial" parent="."]

[node name="Beep1" type="AudioStreamPlayer" parent="AudioPlayers"]
stream = ExtResource( 3 )

[node name="Beep2" type="AudioStreamPlayer" parent="AudioPlayers"]
stream = ExtResource( 4 )

[node name="Timers" type="Node" parent="."]

[node name="SequenceTimer" type="Timer" parent="Timers"]
one_shot = true
[connection signal="timeout" from="Timers/SequenceTimer" to="." method="onSequenceTimerTimeout"]
